# subspace_rust_openapi_client

./: Cargo.toml  README.md  git_push.sh
docs/: AcceleratorServiceApi.md  Body.md  Body1.md  GlobalTurnServiceApi.md  ProjectServiceApi.md  ProtobufAny.md  RpcStatus.md  SessionServiceApi.md  SipTeleportServiceApi.md  V1Accelerator.md  V1CreateSipTeleport.md  V1GlobalTurnResponse.md  V1GlobalTurnServer.md  V1ListAcceleratorResponse.md  V1ListAcceleratorsResponse.md  V1ListProjectsResponse.md  V1ListSessionsResponse.md  V1ListSipTeleportResponse.md  V1NextPage.md  V1Project.md  V1Protocol.md  V1Session.md  V1SipTeleportResponse.md  V1SipTeleportStatus.md  V1TeleportAddresses.md  V1TransportType.md  V1UpdateSipTeleport.md  V1WebRtcCdnResponse.md  V1WebRtcCdnServer.md  WebRtcCdnServiceApi.md
src/apis/: accelerator_service_api.rs  configuration.rs  global_turn_service_api.rs  mod.rs  project_service_api.rs  session_service_api.rs  sip_teleport_service_api.rs  web_rtc_cdn_service_api.rs
src/models/: body.rs  body_1.rs  mod.rs  protobuf_any.rs  rpc_status.rs  v1_accelerator.rs  v1_create_sip_teleport.rs  v1_global_turn_response.rs  v1_global_turn_server.rs  v1_list_accelerator_response.rs  v1_list_accelerators_response.rs  v1_list_projects_response.rs  v1_list_sessions_response.rs  v1_list_sip_teleport_response.rs  v1_next_page.rs  v1_project.rs  v1_protocol.rs  v1_session.rs  v1_sip_teleport_response.rs  v1_sip_teleport_status.rs  v1_teleport_addresses.rs  v1_transport_type.rs  v1_update_sip_teleport.rs  v1_web_rtc_cdn_response.rs  v1_web_rtc_cdn_server.rs
