[package]
name = "subspace_openapi_client"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"
license = "MIT"
description = "The Subspace client library for working with the Subspace API, generated via OpenAPI"
documentation = "https://console.subspace.com/docs"
readme = "README.md"
homepage = "https://subspace.com"
repository = "https://github.com/subspace-com/subspace_rust_openapi_client"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart", "default-tls"]

[dev-dependencies]
